# BE_Blanball_public

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy-develop-docker-compose.yml  deploy-main-docker-compose.yml  docker-compose.yml  encode_env.sh  pyproject.toml  setup.cfg
.github/workflows/: build-proxy.yml  docker-image.yml
nginx/: Dockerfile  nginx.conf  nginx_proxy.conf
project/: manage.py  uwsgi.ini  uwsgi_params
project/authentication/: filters.py  middlewares.py  models.py  permisions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
project/authentication/constant/: code_types.py  errors.py  success.py
project/authentication/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_gender.py  0004_alter_profile_about_me_alter_profile_age_and_more.py  0005_alter_code_dop_info_alter_code_life_time_and_more.py  0006_alter_profile_avatar.py
project/authentication/tests/: set_up.py  test_models.py  test_views.py
project/config/: asgi.py  celery.py  config.json  exceptions.py  pagination.py  renderers.py  urls.py  yasg.py
project/config/settings/: __init__.py
project/events/: apps.py  filters.py  middlewares.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py
project/notifications/: apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  signlas.py  tasks.py  urls.py  views.py
project/reviews/: models.py  serializers.py  urls.py  views.py
project/templates/: email_code.html  email_confirm.html
scripts/: entrypoint.sh
(+30 files in other folders)
